--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,7 +9,9 @@
     <color name="white">#FFFFFFFF</color>
     <color name="colorPrimaryDark">#3262c4</color>
     <color name="colorWhite">#FFFFFF</color>
-    <color name="hint">#A7C5CA</color>
+    <color name="hint">#030304</color>
+    <color name="navbar">#0743BC</color>
+    <color name="list">#E9E4F4</color>
 
     <color name="black">#FF000000</color>
     <color name="purple_700">#FF3700B3</color>
