--- a/app/src/main/res/drawable/hall_background.xml
+++ b/app/src/main/res/drawable/hall_background.xml
@@ -3,7 +3,7 @@
     android:shape="rectangle">
     <corners android:radius="0dp" />
     <gradient
-        android:startColor="#060E35"
+        android:startColor="#021053"
         android:endColor="#3649C6"
         android:angle="90"/>
     <padding android:left="7dp"
