--- a/app/src/main/res/layout/activity_hall_teacher_list.xml
+++ b/app/src/main/res/layout/activity_hall_teacher_list.xml
@@ -47,7 +47,7 @@
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <ListView
-        android:id="@+id/halllist"
+        android:id="@+id/halllist1"
         android:layout_width="400dp"
         android:layout_height="472dp"
 
@@ -89,7 +89,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.952"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/halllist"
+        app:layout_constraintTop_toBottomOf="@+id/halllist1"
         app:srcCompat="@drawable/c6" />
 
     <TextView
@@ -99,11 +99,11 @@
 
         android:layout_marginTop="24dp"
         android:layout_marginBottom="19dp"
-        android:text="Hall Details"
+        android:text="Available Teachers"
         android:textColor="@color/black"
-        android:textSize="40sp"
+        android:textSize="34sp"
         android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@+id/halllist"
+        app:layout_constraintBottom_toTopOf="@+id/halllist1"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />
