--- a/app/src/main/res/layout/activity_class_payements.xml
+++ b/app/src/main/res/layout/activity_class_payements.xml
@@ -157,6 +157,8 @@
         android:layout_marginTop="24dp"
         android:text="Add"
         android:textSize="20sp"
+        android:backgroundTint="@color/lightgreen"
+        android:textColor="@color/black"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
