--- a/app/src/main/res/layout/activity_login_page.xml
+++ b/app/src/main/res/layout/activity_login_page.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/loginback"
+    android:background="@drawable/b8"
     tools:context=".login_page">
 
     <TextView
@@ -19,6 +19,7 @@
         android:textColor="@color/colorPurple"
         android:textSize="30sp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView9" />
 
@@ -27,7 +28,7 @@
         android:layout_width="220dp"
         android:layout_height="35dp"
         android:layout_marginTop="10dp"
-        android:text="Enter Email Address"
+        android:text="Enter User Name"
         android:textColor="#0B0A0A"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -37,27 +38,28 @@
 
     <TextView
         android:id="@+id/tv_kpwd1"
-        android:layout_width="220dp"
-        android:layout_height="27dp"
-        android:layout_marginTop="30dp"
+        android:layout_width="225dp"
+        android:layout_height="46dp"
+        android:layout_marginTop="8dp"
         android:text="Password"
         android:textColor="#101010"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.494"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/pt_email" />
 
     <EditText
         android:id="@+id/pt_email"
-        android:layout_width="220dp"
-        android:layout_height="40dp"
+        android:layout_width="231dp"
+        android:layout_height="59dp"
         android:layout_marginTop="1dp"
         android:ems="10"
         android:hint="@string/pt_email1"
         android:inputType="textPersonName"
-        android:text="Email"
+
         android:textColor="#473E3E"
-        android:textSize="16sp"
+        android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
@@ -65,10 +67,12 @@
 
     <EditText
         android:id="@+id/pw_pwd"
-        android:layout_width="216dp"
-        android:layout_height="32dp"
+        android:layout_width="228dp"
+        android:layout_height="54dp"
         android:ems="10"
+        android:hint="Enter Password"
         android:inputType="textPassword"
+        android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tv_kpwd1"
@@ -76,44 +80,35 @@
 
     <Button
         android:id="@+id/btn_klogin"
-        android:layout_width="81dp"
-        android:layout_height="44dp"
-        android:layout_marginTop="10dp"
+        android:layout_width="92dp"
+        android:layout_height="53dp"
+        android:layout_marginTop="20dp"
         android:hint="@string/btn_klogin"
         android:text="Login"
         android:textColor="#0B0909"
-        app:backgroundTint="#673AB7"
+        android:textSize="16sp"
+        app:backgroundTint="@color/teal_700"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintHorizontal_bias="0.469"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/pw_pwd" />
 
-    <TextView
-        android:id="@+id/tv_kif"
-        android:layout_width="250dp"
-        android:layout_height="23dp"
-        android:layout_marginTop="20dp"
-        android:text="If you haven't Account, please Sign Up"
-        android:textColor="#673AB7"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btn_klogin" />
-
     <Button
-        android:id="@+id/btn_ksignUp"
-        android:layout_width="99dp"
-        android:layout_height="37dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginBottom="84dp"
+        android:id="@+id/btn_ksignUp2"
+        android:layout_width="118dp"
+        android:layout_height="57dp"
+        android:layout_marginEnd="156dp"
+        android:layout_marginRight="156dp"
+        android:layout_marginBottom="44dp"
         android:hint="@string/btn_ksignUp"
         android:text="Sign Up"
         android:textColor="#673AB7"
         android:textSize="12sp"
-        app:backgroundTint="#100909"
+        app:backgroundTint="@color/teal_700"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tv_kif" />
+        app:layout_constraintTop_toBottomOf="@+id/pw_pwd"
+        app:layout_constraintVertical_bias="0.915" />
 
     <ImageView
         android:id="@+id/imageView9"
