--- a/app/src/main/res/layout/activity_class_intro.xml
+++ b/app/src/main/res/layout/activity_class_intro.xml
@@ -8,12 +8,14 @@
     android:background="@drawable/back1"
     tools:context=".ClassIntroActivity">
 
+
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/constraintLayout2"
         android:layout_width="413dp"
         android:layout_height="82dp"
         android:background="@color/lightgreen"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
@@ -31,7 +33,7 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <ImageView
-            android:id="@+id/imageView7"
+            android:id="@+id/back_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
@@ -43,7 +45,6 @@
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
-
     <Button
         android:id="@+id/btn_continue"
         android:layout_width="182dp"
@@ -51,9 +52,9 @@
         android:layout_marginTop="76dp"
         android:text="@string/rschedule_btn_intro"
         android:textColor="@color/black"
-        app:backgroundTint="@color/colourgreen"
+        app:backgroundTint="@color/lightgreen"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.501"
+        app:layout_constraintHorizontal_bias="0.502"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView" />
 
@@ -64,9 +65,9 @@
         android:layout_marginTop="36dp"
         android:text="@string/rschedule_btn_classfee"
         android:textColor="@color/black"
-        app:backgroundTint="@color/colourgreen"
+        app:backgroundTint="@color/lightgreen"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.501"
+        app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btn_continue" />
 
