--- a/app/src/main/res/layout/activity_gallery_home.xml
+++ b/app/src/main/res/layout/activity_gallery_home.xml
@@ -71,7 +71,7 @@
         app:layout_constraintVertical_bias="0.448" />
 
     <ImageView
-        android:id="@+id/imageView7"
+        android:id="@+id/back_button"
         android:layout_width="173dp"
         android:layout_height="112dp"
         app:layout_constraintBottom_toBottomOf="parent"
