--- a/app/src/main/res/layout/activity_update_teacher.xml
+++ b/app/src/main/res/layout/activity_update_teacher.xml
@@ -35,12 +35,12 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toEndOf="@+id/imageView7"
+            app:layout_constraintStart_toEndOf="@+id/back_button"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.181" />
 
         <ImageView
-            android:id="@+id/imageView7"
+            android:id="@+id/back_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="28dp"
