--- a/app/src/main/res/layout/activity_add_teacher.xml
+++ b/app/src/main/res/layout/activity_add_teacher.xml
@@ -49,7 +49,7 @@
         android:ems="10"
         android:hint="@string/pt_kFullName"
         android:inputType="textPersonName"
-        android:text="Enter Full Name"
+        android:text=""
         android:textColor="#F4F1F1"
         android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -84,7 +84,7 @@
         android:ems="10"
         android:hint="@string/pt_mobNum"
         android:inputType="textPersonName"
-        android:text="Enter Number"
+        android:text=""
         android:textColor="#FBF8F8"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -118,7 +118,7 @@
         android:ems="10"
         android:hint="@string/pt_ksubject"
         android:inputType="textPersonName"
-        android:text="Enter Subject"
+        android:text=""
         android:textColor="#F4F0F0"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -152,7 +152,7 @@
         android:ems="10"
         android:hint="@string/pt_kidcard"
         android:inputType="textPersonName"
-        android:text="Enter ID Number"
+        android:text=""
         android:textColor="#FAF6F6"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -186,7 +186,7 @@
         android:ems="10"
         android:hint="@string/pt_kaddress"
         android:inputType="textPersonName"
-        android:text="Enter Address"
+        android:text=""
         android:textColor="#FAF3F3"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
